--- a/package.json
+++ b/package.json
@@ -20,12 +20,21 @@
   },
   "homepage": "https://github.com/muturgan/gaz_neft_bell_int#readme",
   "dependencies": {
+    "apollo-server-express": "^2.15.0",
+    "axios": "^0.19.2",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "express": "^4.17.1",
+    "graphql": "^15.1.0",
     "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.2",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.0",
     "@types/mysql": "^2.15.13",
     "@types/node": "^14.0.13",
