--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "graphql": "^15.1.0",
     "mysql": "^2.18.1",
+    "nconf": "^0.10.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.2",
     "typedi": "^0.8.0",
@@ -37,6 +38,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.0",
     "@types/mysql": "^2.15.13",
+    "@types/nconf": "^0.10.0",
     "@types/node": "^14.0.13",
     "cross-env": "^7.0.2",
     "jest": "^26.0.1",
