--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,12 @@
   "wise_instruction": "Никогда не храните конфиги в репозитории!",
 
   "host": "localhost",
-  "port": 3333
+  "port": 3333,
+
+  "db_type": "mysql",
+  "db_name": "bell",
+  "db_host": "localhost",
+  "db_port": 3306,
+  "db_user": "root",
+  "db_password": "integrator"
 }
