--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "rimraf dist && tsc",
     "dev": "cross-env NODE_ENV=develompment nodemon",
+    "seed": "ts-node ./src/seeds/index.ts",
     "test": "npm run build && cross-env NODE_ENV=test jest --config jest.config.e2e.js --outputFile=coverage/result.json --json --forceExit --detectOpenHandles --coverage --verbose"
   },
   "repository": {
