--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "My test task for Bell Integrator and GazpromNeft",
   "main": "dist/index.js",
   "scripts": {
+    "start": "npm run build && node -r dotenv/config ./dist/index.js",
     "build": "rimraf dist && tsc",
     "dev": "cross-env NODE_ENV=develompment nodemon",
-    "seed": "ts-node ./src/seeds/index.ts",
-    "test": "npm run build && cross-env NODE_ENV=test jest --config jest.config.e2e.js --outputFile=coverage/result.json --json --forceExit --detectOpenHandles --coverage --verbose"
+    "seed": "ts-node -r dotenv/config ./src/seeds/index.ts",
+    "test": "npm run build && cross-env NODE_ENV=test jest --setupFiles dotenv/config --config jest.config.e2e.js --outputFile=coverage/result.json --json --forceExit --detectOpenHandles --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,10 @@
     "apollo-server-express": "^2.15.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.1.0",
     "mysql": "^2.18.1",
-    "nconf": "^0.10.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.2",
     "typedi": "^0.8.0",
@@ -38,7 +39,6 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.0",
     "@types/mysql": "^2.15.13",
-    "@types/nconf": "^0.10.0",
     "@types/node": "^14.0.13",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
