--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "npm run build && node -r dotenv/config ./dist/index.js",
+    "fas": "npm run build && node -r dotenv/config ./dist/fastify.js",
     "build": "rimraf dist && tsc",
     "dev": "cross-env NODE_ENV=develompment nodemon",
     "seed": "ts-node -r dotenv/config ./src/seeds/index.ts",
@@ -23,9 +24,11 @@
   "homepage": "https://github.com/muturgan/gaz_neft_bell_int#readme",
   "dependencies": {
     "apollo-server-express": "^2.15.1",
+    "apollo-server-fastify": "^2.15.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fastify": "^2.15.1",
     "graphql": "^15.3.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
